# gamers-addict-research

./: README.md  pyproject.toml  reddit_gaming_posts.csv  self_report_reddit_gaming_posts.csv  self_report_reddit_gaming_posts_11-13-2024-18:56:05.csv  self_report_reddit_gaming_posts_11-13-2024-19:03:11.csv
scraper/: reddit.py
