[tool.poetry]
name = "gamers-addict-research"
version = "0.1.0"
description = ""
authors = ["shaharlini <shaharlini@gmail.com>"]
readme = "README.md"
packages = [{include = "gamers_addict_research"}]

[tool.poetry.dependencies]
python = "^3.11"
praw = "^7.8.1"
pandas = "^2.2.3"
tqdm = "^4.67.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
